tests/ui/span/issue-27522.rs
// Point at correct span for self type

struct SomeType {}

trait Foo {
    fn handler(self: &SomeType); //~ ERROR invalid `self` parameter type
}

fn main() {}
